--- a/tripedia/.classpath
+++ b/tripedia/.classpath
@@ -2,7 +2,25 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Activibe/Downloads/jsoup-1.7.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="/Users/Activibe/Downloads/json-lib-2.3-jdk15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/jsoup-1.7.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/json-lib-2.3-jdk15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/fluent-hc-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/httpclient-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/httpclient-cache-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/httpcore-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/httpcomponents-client-4.2.2-bin/httpcomponents-client-4.2.2/lib/httpmime-4.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-lang3-3.1-bin/commons-lang3-3.1/commons-lang3-3.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-lang3-3.1-bin/commons-lang3-3.1/commons-lang3-3.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-lang3-3.1-bin/commons-lang3-3.1/commons-lang3-3.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-lang3-3.1-bin/commons-lang3-3.1/commons-lang3-3.1-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-io-2.4-bin/commons-io-2.4/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-io-2.4-bin/commons-io-2.4/commons-io-2.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-io-2.4-bin/commons-io-2.4/commons-io-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-io-2.4-bin/commons-io-2.4/commons-io-2.4-tests.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/commons-io-2.4-bin/commons-io-2.4/commons-io-2.4-test-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/argo-3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Owner/Downloads/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
